--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,32 @@
-/* 
+.traffic-light{
+    width: 100px;
+    margin: 50px auto;
+    padding: 10px;
+    background-color: black;
+    border-radius: 10px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.light{
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+    border-radius: 50%;
+    background-color:  gray;
+    transition: 0.3s;
+}
 
-*/
+.red{
+    background-color: red;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.green{
+    background-color: green;
+}
+
+.glow{
+    box-shadow: 0 0 20px 10px white;
+}
